--- a/main/site3.html
+++ b/main/site3.html
@@ -285,7 +285,7 @@
 
                             <div class="box-body">
                                 <div class="text-center py-20">
-                                    <canvas id="s3-ip-chart"></canvas>
+                                    <div id="s3-ip-chart"></div>
                                 </div>
                             </div>
                         </div>
@@ -309,7 +309,7 @@
                                 <h4 class="box-title">المدخلات (طن)</h4>
                             </div>
                             <div class="box-body">
-                                <div id="s3-in-grph"></div>
+                                <canvas id="s3-in-grph"></canvas>
                             </div>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                     <!--                            &lt;!&ndash;                            </a>&ndash;&gt;-->
                     <!--                            <div class="box-body">-->
                     <!--                                <div class="text-center py-20">-->
-                    <!--                                    <canvas id="s3-op-chart"></canvas>-->
+                    <!--                                    <div id="s3-op-chart"></div>-->
                     <!--                                </div>-->
                     <!--                            </div>-->
                     <!--                        </div>-->
