--- a/main/site2.html
+++ b/main/site2.html
@@ -151,126 +151,127 @@
             <!-- Main content -->
             <section class="content">
                 <div class="row">
-                    <div class="col-xl-6 col-md-12 col-12">
-                        <div class="box p-4">
-                            <h1 class="fw-500 text-dark" id="s2-rejected-per"></h1>
-                            <small class="fw-200 fs-2" id="s2-accepted"></small>
-                            <p class="fs-4">
-                                نسبة المرفوضات من المخلفات الصالحة للمعالجة
-                            </p>
-                            <div class="progress progress-xs mt-10 mb-0 max-w-p90">
-                                <div
-                                        class="progress-bar"
-                                        role="progressbar"
-                                        style="width: 100%; background-color: #003f5c"
-                                        aria-valuenow="0"
-                                        aria-valuemin="0"
-                                        aria-valuemax="100"
-                                        id="s2-rej-progress"
-                                ></div>
+                    <div class="col-xl-6 col-md-6 col-12">
+
+                        <div class="col-xl-12 col-md-12 col-12">
+                            <div class="box p-4">
+                                <h1 class="fw-500 text-dark" id="s2-rejected-per"></h1>
+                                <small class="fw-200 fs-2" id="s2-accepted"></small>
+                                <p class="fs-4">
+                                    نسبة المرفوضات من المخلفات الصالحة للمعالجة
+                                </p>
+                                <div class="progress progress-xs mt-10 mb-0 max-w-p90">
+                                    <div
+                                            class="progress-bar"
+                                            role="progressbar"
+                                            style="width: 100%; background-color: #003f5c"
+                                            aria-valuenow="0"
+                                            aria-valuemin="0"
+                                            aria-valuemax="100"
+                                            id="s2-rej-progress"
+                                    ></div>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="col-xl-6 col-md-12 col-12">
-                        <div class="box p-4" style="color: #003f5c">
-                            <h1 class="fw-500" id="s2-accepted-per"></h1>
-                            <p class="fs-4">نسبة المخلفات الصالحة للمعالجة</p>
-                            <div class="progress progress-xs mt-10 mb-0 max-w-p90">
-                                <div
-                                        class="progress-bar"
-                                        role="progressbar"
-                                        style="width: 100%; background-color: #003f5c"
-                                        aria-valuenow="0"
-                                        aria-valuemin="0"
-                                        aria-valuemax="100"
-                                        id="s2-acc-progress"
-                                ></div>
+                        <div class="col-xl-12 col-md-12 col-12">
+                            <div class="box p-4" style="color: #003f5c">
+                                <h1 class="fw-500" id="s2-accepted-per"></h1>
+                                <p class="fs-4">نسبة المخلفات الصالحة للمعالجة</p>
+                                <div class="progress progress-xs mt-10 mb-0 max-w-p90">
+                                    <div
+                                            class="progress-bar"
+                                            role="progressbar"
+                                            style="width: 100%; background-color: #003f5c"
+                                            aria-valuenow="0"
+                                            aria-valuemin="0"
+                                            aria-valuemax="100"
+                                            id="s2-acc-progress"
+                                    ></div>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="col-xl-3 col-md-6 col-12">
-                        <div class="box p-4">
-                            <div
-                                    class="d-flex align-items-center justify-content-between"
-                            >
-                                <!--                                <img src="../images/import.png" style="height: 60px">-->
-                                <div style="color: #ef601c">
-                                    <h3 class="fw-500" id="s2-ip-box"></h3>
-                                    <p class="fs-4 fw-600">اجمالى وزن المدخلات</p>
+                        <div class="row">
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box p-4">
+                                    <div
+                                            class="d-flex align-items-center justify-content-between"
+                                    >
+                                        <!--                                <img src="../images/import.png" style="height: 60px">-->
+                                        <div style="color: #ef601c">
+                                            <h3 class="fw-500" id="s2-ip-box"></h3>
+                                            <p class="fs-4 fw-600">اجمالى وزن المدخلات</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-6 col-md-6 col-12">
+                                <div class="box p-4">
+                                    <div
+                                            class="d-flex align-items-center justify-content-between"
+                                    >
+                                        <!--                                <img src="../images/export.png" style="height: 60px">-->
+                                        <div style="color: #36ca0f">
+                                            <h3 class="fw-500" id="s2-op-box"></h3>
+                                            <p class="fs-4 fw-600">اجمالى وزن المخرجات</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-xl-3 col-md-6 col-12">
-                        <div class="box p-4">
-                            <div
-                                    class="d-flex align-items-center justify-content-between"
-                            >
-                                <!--                                <img src="../images/export.png" style="height: 60px">-->
-                                <div style="color: #36ca0f">
-                                    <h3 class="fw-500" id="s2-op-box"></h3>
-                                    <p class="fs-4 fw-600">اجمالى وزن المخرجات</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <div class="col-xl-6 col-md-6 col-12">
-                        <div
-                                class="box p-4"
-                                style="height: 135px; justify-content: center"
-                        >
-                            <!--                            <button class="edit-button" style="position: absolute; top: 0; left: 0;">Edit</button>-->
+                        <div id="popupContainerOperations" class="popup">
+                            <div class="popup-content-operations">
+                                        <span class="close"
+                                              id="closeOperationsPopupBtn">&times;</span>
+                                <h2 style="font-size: 21px;margin-bottom: 35px;">تغيير الكميات التراكمية والنسب من
+                                    المخلفات الصالحة للمعالجة
+                                    لليوم</h2>
+                                <span style="position:relative;font-size:medium;right: 160px">النسبة</span>
+                                <span style="position:absolute;font-size:medium;right: 275px">الكمية المتراكمة</span>
+                                <div class="row" style="margin-top: 10px;">
+                                    <form id="dataInputForm">
+                                    </form>
+                                    <form id="dataInputForm2">
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box pull-up">
+                            <div class="box-body">
+                                <div class="d-flex flex-column">
 
-                            <a
-                                    href="#"
-                                    class="rounded d-none d-md-inline-block mx-10 push-btn"
-                                    role="button"
-                                    style="position: absolute; top: 0; left: 0"
-                                    onclick="toggleInputField()()"
-                            >
-                                <i class="ti-pencil" id="evapEditButton"></i>
-                            </a>
-
-                            <div
-                                    class="row d-flex align-items-center justify-content-between"
-                            >
-                                <!--                                <div>-->
-                                <!--                                    <select id="mass-dateRangeDropdown-s2" onchange="updateInputGraph_s2()">-->
-                                <!--                                        <option value="last7days">اسبوع</option>-->
-                                <!--                                        <option value="last14days">اسبوعين</option>-->
-                                <!--                                        <option value="lastMonth">الشهر الماضى</option>-->
-                                <!--                                        &lt;!&ndash;                                    <option value="lastYear">Last Year</option>&ndash;&gt;-->
-                                <!--                                    </select>-->
-                                <!--                                </div>-->
-
-                                <p class="col-6 fs-4">صافى الوزن</p>
-                                <h3 class="col-6 fw-500" id="s2-mass-box"></h3>
-                                <div id="evapInputContainer" style="display: none">
-                                    <label for="evap_rate">نسبة التبخر</label>
-                                    <input
-                                            type="text"
-                                            id="evap_rate"
-                                            style="border-radius: 6px; width: 50px"
-                                    />
-                                    <button
-                                            onclick="saveEvapInput()"
-                                            style="border: 0; border-radius: 11px; height: 30px"
-                                    >
-                                        حفظ
-                                    </button>
-                                    <p id="validationError" style="color: red; display: none">
-                                        برجاء ادخال رقم اقل من 1
-                                    </p>
-                                    <p
-                                            id="validationMessage"
-                                            style="color: green; display: none"
-                                    >
-                                        تم حفظ النسبة الجديدة
-                                    </p>
+                                    <h5 class="fs-4 mb-0" style="color: #003F5C; font-weight: bold; margin: auto">
+                                        تحت التشغيل اليوم
+                                    </h5>
+                                    <button id="openOperationPopupBtn">تعديل</button>
+                                    <div class="d-flex justify-content-between" style="color: #2da075">
+                                        <span class="operations-label fs-4 fw-500">اسمدة عضوية<span
+                                                id="asmeda-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-value fs-4 fw-500" id="asmeda-operation-weight"></span>
+                                    </div>
+                                    <div class="d-flex justify-content-between" style="color: #10d6b4">
+                                        <span class="operations-label fs-4 fw-500">مرفوضات<span
+                                                id="marfoodat-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-value fs-4 fw-500"
+                                              id="marfoodat-operation-weight"></span>
+                                    </div>
+                                    <div class="d-flex justify-content-between" style="color: #1427c9">
+                                        <span class="operations-label fs-4 fw-500">وقود بديل<span
+                                                id="waqood-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-value fs-4 fw-500" id="waqood-operation-weight"></span>
+                                    </div>
+                                    <div class="d-flex justify-content-between" style="color: #85a6e9">
+                                        <span class="operations-label fs-4 fw-500">مفروزات<span
+                                                id="mafroozat-percentage" style="font-size: medium"></span></span>
+                                        <span class="operations-value fs-4 fw-500"
+                                              id="mafroozat-operation-weight"></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -286,7 +287,7 @@
 
                             <div class="box-body">
                                 <div class="text-center py-20">
-                                    <canvas id="s2-ip-chart"></canvas>
+                                    <div style="direction:ltr" id="s2-ip-chart"></div>
                                 </div>
                             </div>
                         </div>
@@ -324,7 +325,7 @@
                                 <h4 class="box-title">المدخلات (طن)</h4>
                             </div>
                             <div class="box-body">
-                                <div id="s2-in-grph"></div>
+                                <canvas id="s2-in-grph"></canvas>
                             </div>
                         </div>
                     </div>
@@ -338,7 +339,7 @@
                             <!--                            </a>-->
                             <div class="box-body">
                                 <div class="text-center py-20">
-                                    <canvas id="s2-op-chart"></canvas>
+                                    <div style="direction:ltr" id="s2-op-chart"></div>
                                 </div>
                             </div>
                         </div>
@@ -349,8 +350,7 @@
                             <div>
                                 <select
                                         id="op-dateRangeDropdown-s2"
-                                        onchange="updateOutputGraph_s2()"
-                                >
+                                        onchange="updateOutputGraph_s2()">
                                     <option value="last7days">اسبوع</option>
                                     <option value="last14days">اسبوعين</option>
                                     <option value="lastMonth">الشهر الماضى</option>
@@ -361,20 +361,20 @@
                                 <h4 class="box-title">المخرجات (طن)</h4>
                             </div>
                             <div class="box-body">
-                                <div id="s2-out-grph"></div>
+                                <canvas id="s2-out-grph"></canvas>
                             </div>
                         </div>
                     </div>
                 </div>
 
-<!--                <div-->
-<!--                        class="input-group mb-3"-->
-<!--                        style="display: none; position: absolute; right: 35%"-->
-<!--                        id="datatableDatePickerGroup"-->
-<!--                >-->
-<!--                    <span> التاريخ: </span>-->
-<!--                    <input type="text" id="datatableDatePicker" placeholder=""/>-->
-<!--                </div>-->
+                <!--                <div-->
+                <!--                        class="input-group mb-3"-->
+                <!--                        style="display: none; position: absolute; right: 35%"-->
+                <!--                        id="datatableDatePickerGroup"-->
+                <!--                >-->
+                <!--                    <span> التاريخ: </span>-->
+                <!--                    <input type="text" id="datatableDatePicker" placeholder=""/>-->
+                <!--                </div>-->
 
                 <div class="input-group mb-3" style="width: 200px; margin-top: auto">
                     <input type="text" class="form-control" id="datatableDateRangePicker"/>
@@ -400,7 +400,7 @@
                         <th class="searchable-column">العميل</th>
                         <th class="searchable-column">الوحدة المحلية</th>
                         <th class="searchable-column">نوع الشحنة</th>
-<!--                        <th class="searchable-column">اسم الصنف</th>-->
+                        <!--                        <th class="searchable-column">اسم الصنف</th>-->
                         <!--                        <th class="searchable-column">المحافظة</th>-->
                         <th class="searchable-column">رقم السيارة</th>
                         <th class="searchable-column">الوزن الاول (كجم)</th>
@@ -442,10 +442,12 @@
 
 <script src="js/template.js"></script>
 <script src="../assets/vendor_components/moment/moment.js"></script>
-<script src="js/site2.js"></script>
+<script type="module" src="js/site2.js"></script>
 
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/ar.js"></script>-->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/en-gb.js"></script>-->
+
+<script src="js/pages/chartjs-plugin-datalabels.js"></script>
 
 <script src="../assets/vendor_components/bootstrap-daterangepicker/daterangepicker.js"></script>
 
