--- a/main/site2.html
+++ b/main/site2.html
@@ -442,7 +442,7 @@
 
 <script src="js/template.js"></script>
 <script src="../assets/vendor_components/moment/moment.js"></script>
-<script type="module" src="js/site2.js"></script>
+<script src="js/site2.js"></script>
 
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/ar.js"></script>-->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/en-gb.js"></script>-->
